<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/app_name_greeting_screen"
            android:textAlignment="center"
            android:textSize="50sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"
            android:textColor="#3E3936"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/create_name_greeting_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/students" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|left">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting1"
                android:textSize="30sp"
                tools:ignore="MissingConstraints"
                android:textColor="#3E3936"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/greeting2"
                android:textColor="#3E3936"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_gravity="center|bottom"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/next"
            android:layout_marginBottom="25dp"
            tools:ignore="MissingConstraints"
            app:cornerRadius="360dp"
            android:shadowDy="0.5"
            android:shadowDx="0.5"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>