<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GreetingActivity2"
    android:background="#F3F5F9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/app_name_greeting_screen"
            android:textAlignment="center"
            android:textSize="50sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"
            android:textColor="#3E3936"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_player_name"
            tools:ignore="MissingConstraints"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="250dp"
            android:layout_marginStart="30dp"
            android:textColor="#3E3936"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="15dp"
            android:textColor="#3E3936"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_name_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cornerRadius="30dp"/>

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kids"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>